# pages

./: .gitignore  CMakeLists.txt  README.md
resources/story/: onir.sf  test.sf
shared/catch/: .gitignore  readme.md  update.py
shared/catch/include/catch/: catchutils.hpp
shared/mutils/: .gitignore  CMakeLists.txt  README.md
shared/mutils/include/mutils/: abstractresourcemanager.hpp  algorithm.hpp  assert.hpp  collision.hpp  color.hpp  observed.hpp  observer.hpp  resourcemanager.hpp  settingsmanager.hpp  stringutils.hpp  variant.hpp  vec2.hpp  vectorutils.hpp
shared/mutils/src/: algorithm.cpp  assert.cpp  collision.cpp  collisiontests.cpp  color.cpp  observed.cpp  stringutils.cpp  stringutilstests.cpp  variant.cpp  vec2.cpp  vectorutilstests.cpp
shared/scenelib/: CMakeLists.txt
shared/scenelib/include/scenelib/: scene.hpp  scenemanager.hpp
shared/scenelib/src/: scene.cpp  scenemanager.cpp  txtparser.cpp  txtparser.hpp  yamlparser.cpp  yamlparser.hpp
shared/sfmltemplate/: CMakeLists.txt  README.md
shared/sfmltemplate/include/sfmltemplate/core/: abstractstate.hpp  application.hpp  graphics.hpp  guifactory.hpp  inputmanager.hpp  inputprocessor.hpp  pathmanager.hpp  resourceholder.hpp  resourcemanager.hpp  statemanager.hpp
shared/sfmltemplate/include/sfmltemplate/gui/: abstractinteractable.hpp  abstractpushbutton.hpp  abstractradiobutton.hpp  abstracttextbox.hpp  abstracttogglebutton.hpp  basiclook.hpp  radiobuttongroup.hpp  scenegraph.hpp  scenenode.hpp
shared/sfmltemplate/include/sfmltemplate/gui/drawables/: coloredshapepushbutton.hpp  shadedshape.hpp  shapeshifter.hpp
shared/sfmltemplate/include/sfmltemplate/gui/nodes/: abstractinteractablenode.hpp  pushbuttonnode.hpp  shapeshifterpushbuttonnode.hpp  shapeshiftertogglebuttonnode.hpp  togglebuttonnode.hpp
shared/sfmltemplate/include/sfmltemplate/gui/shaders/: fsbasebuttonuniforms.hpp
shared/sfmltemplate/src/core/: abstractstate.cpp  application.cpp  graphics.cpp  guifactory.cpp  inputmanager.cpp  inputprocessor.cpp  pathmanager.cpp  resourcemanager.cpp  statemanager.cpp
shared/sfmltemplate/src/gui/: abstractinteractable.cpp  abstractpushbutton.cpp  abstractradiobutton.cpp  abstracttextbox.cpp  abstracttogglebutton.cpp  radiobuttongroup.cpp  scenegraph.cpp  scenenode.cpp
shared/sfmltemplate/src/gui/drawables/: coloredshapepushbutton.cpp  shadedshape.cpp  shapeshifter.cpp
shared/sfmltemplate/src/gui/nodes/: abstractinteractablenode.cpp  pushbuttonnode.cpp  shapeshifterpushbuttonnode.cpp  shapeshiftertogglebuttonnode.cpp  togglebuttonnode.cpp
shared/sfmlutils/: CMakeLists.txt
shared/sfmlutils/include/sfmlutils/: camera.hpp  colorutils.hpp  drawutils.hpp  keyutils.hpp  namedpoint.hpp  shapeutils.hpp  spriteutils.hpp  vectorutils.hpp  windowutils.hpp
shared/sfmlutils/src/: camera.cpp  colorutils.cpp  drawutils.cpp  keyutils.cpp  namedpoint.cpp  shapeutils.cpp  spriteutils.cpp  vectorutils.cpp  windowutils.cpp
src/: abstractbook.cpp  abstractbook.hpp  app.cpp  app.hpp  booknode.cpp  booknode.hpp  choicebutton.cpp  choicebutton.hpp  gamebook.cpp  gamebook.hpp  guifactory.cpp  guifactory.hpp  main.cpp  pathmanager.cpp  pathmanager.hpp  pushbutton.cpp  pushbutton.hpp  resourcemanager.cpp  resourcemanager.hpp  stategame.cpp  stategame.hpp  statemainmenu.cpp  statemainmenu.hpp  statemanager.cpp  statemanager.hpp  statetest.cpp  statetest.hpp
src/shaders/: fsdistancepointline.hpp  fsdrawclipparta.hpp  fsdrawclippartb.hpp  fsdrawinclip.hpp  fsdrawoutclip.hpp  fsispointinrectangle.hpp
